feat: support custom stage durations
