# backend/bracket/models/db/stage.py
@@ -1,6 +1,7 @@
 from typing import Literal
 
 from heliclockter import datetime_utc
+from pydantic import Field
 
 from bracket.models.db.shared import BaseModelORM
 from bracket.utils.id_types import StageId, TournamentId
@@ -11,6 +12,7 @@ class StageInsertable(BaseModelORM):
     name: str
     created: datetime_utc
     is_active: bool
+    custom_duration_minutes: int | None = Field(default=None, ge=1)
 
 
 class Stage(StageInsertable):
@@ -19,6 +21,7 @@ class Stage(StageInsertable):
 
 class StageUpdateBody(BaseModelORM):
     name: str
+    custom_duration_minutes: int | None = Field(default=None, ge=1)
 
 
 class StageActivateBody(BaseModelORM):
