# backend/openapi/openapi.json
@@ -1998,13 +1998,26 @@
       },
       "StageUpdateBody": {
         "properties": {
+          "custom_duration_minutes": {
+            "anyOf": [
+              {
+                "minimum": 1.0,
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Custom Duration Minutes"
+          },
           "name": {
             "title": "Name",
             "type": "string"
           }
         },
         "required": [
-          "name"
+          "name",
+          "custom_duration_minutes"
         ],
         "title": "StageUpdateBody",
         "type": "object"
@@ -2015,6 +2028,18 @@
             "format": "date-time",
             "title": "Created",
             "type": "string"
+          },
+          "custom_duration_minutes": {
+            "anyOf": [
+              {
+                "minimum": 1.0,
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Custom Duration Minutes"
           },
           "id": {
             "title": "Id",
@@ -2045,6 +2070,7 @@
           "name",
           "created",
           "is_active",
+          "custom_duration_minutes",
           "id",
           "stage_items"
         ],
